--- a/gameStyle.css
+++ b/gameStyle.css
@@ -122,7 +122,7 @@
     width: 50%;
     font-size: 1.5vw;
     padding: 5px;
-    margin: 30% 0 0 0;
+    margin: 0 0 0 0;
     font-family: 'Indie Flower', cursive;
     border-radius: 10px;
     color: rgb(255, 255, 255);
